--- a/app/views/car_categories/_form.html.erb
+++ b/app/views/car_categories/_form.html.erb
@@ -16,5 +16,5 @@
 	<%= f.text_field :third_part_insurance %>
 
 
-	<%= f.submit 'Enviar'%>
+	<button class="button-enviar-form" type="submit">Enviar</button>
 <% end %>
