--- a/app/views/manufacturers/_form.html.erb
+++ b/app/views/manufacturers/_form.html.erb
@@ -10,6 +10,6 @@
 		<div class="field">
 			<%= f.text_field :name %>
 		</div>
-		<%= f.submit 'Enviar'%>
+		<button class="button-enviar-form" type="submit">Enviar</button>
 	<% end %>
 </div>
