--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Voltar', manufacturers_path %>
+<h3 class="link-to-back"><%= link_to 'Voltar', manufacturers_path %></h3>
 
 <div class="form-session">
 	<h1>Registre um novo fabricante</h1>
