--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Voltar', rentals_path %>
+<h3 class="link-to-back"><%= link_to 'Voltar', rentals_path %></h3>
 
 <div class="form-session">
 	<h1>Nova locação</h1>
