--- a/app/views/subsidiaries/index.html.erb
+++ b/app/views/subsidiaries/index.html.erb
@@ -1,6 +1,7 @@
+<h3 class="link-to-back"><%= link_to 'Voltar', root_path %></h3>
+
 <h1>Filiais</h1>
 
-<%= link_to 'Voltar', root_path %>
 <%= link_to 'Cadastrar uma filial', new_subsidiary_path%>
 
 <% if @subsidiaries.empty? %>
