--- a/app/views/manufacturers/show.html.erb
+++ b/app/views/manufacturers/show.html.erb
@@ -1,5 +1,11 @@
-<h1><%= @manufacturer.name %></h1>
+<h3 class="link-to-back"><%= link_to 'Voltar', manufacturers_path %></h3>
 
-<%= link_to 'Voltar', manufacturers_path %>
-<%= link_to 'Editar', edit_manufacturer_path(@manufacturer)%>
-<%= link_to 'Excluir', manufacturer_path(@manufacturer), method: :delete %>
+<div class="manufacturers-div">
+
+	<h1 class="title-manufacturer"><%= @manufacturer.name %></h1>
+
+	<div class="buttons-manufacturer">
+		<p class="link-editar"><%= link_to 'Editar', edit_manufacturer_path(@manufacturer)%></p>
+		<p class="link-excluir"><%= link_to 'Excluir', manufacturer_path(@manufacturer), method: :delete %></p>
+	</div>
+</div>
