--- a/app/views/rentals/_form.html.erb
+++ b/app/views/rentals/_form.html.erb
@@ -20,6 +20,6 @@
 			<%= f.label :car_category_id %>
 			<%= f.collection_select :car_category_id, @car_categories, :id, :name %>
 		</div>
-		<%= f.submit 'Enviar'%>
+		<button class="button-enviar-form" type="submit">Enviar</button>
 	<% end %>
 </div>
