--- a/app/views/subsidiaries/_form.html.erb
+++ b/app/views/subsidiaries/_form.html.erb
@@ -2,15 +2,20 @@
 	<p><%= message %></p>
 <% end %>
 
-<%= form_with model: @subsidiary, local: true do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
-
-	<%= f.label :cnpj %>
-	<%= f.text_field :cnpj %>
-
-	<%= f.label :address %>
-	<%= f.text_field :address %>
-
-	<%= f.submit 'Enviar'%>
-<% end %>
+<div class="form">
+	<%= form_with model: @subsidiary, local: true do |f| %>
+		<div class="field">
+			<%= f.label :name %>
+			<%= f.text_field :name %>
+		</div>
+		<div class="field">
+			<%= f.label :cnpj %>
+			<%= f.text_field :cnpj %>
+		</div>
+		<div class="field">
+			<%= f.label :address %>
+			<%= f.text_field :address %>
+		</div>
+		<button class="button-enviar-form" type="submit">Enviar</button>
+	<% end %>
+</div>
