--- a/app/views/subsidiaries/edit.html.erb
+++ b/app/views/subsidiaries/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Editando uma filial:</h1>
+<h3 class="link-to-back"><%= link_to 'Voltar', subsidiaries_path %></h3>
 
-<%= link_to 'Voltar', subsidiaries_path %>
+<div class="form-session">
+	<h1>Editando uma filial</h1>
 
-<%= render "form" %>
+	<%= render "form" %>
+</div>
