--- a/app/views/rentals/_form.html.erb
+++ b/app/views/rentals/_form.html.erb
@@ -12,13 +12,16 @@
 			<%= f.label :end_date%>
 			<%= f.date_field :end_date %>
 		</div>
-		<div class="field">
-			<%= f.label :customer_id %>
-			<%= f.collection_select :customer_id, @customers, :id, :name %>
-		</div>
-		<div class="field">
-			<%= f.label :car_category_id %>
-			<%= f.collection_select :car_category_id, @car_categories, :id, :name %>
+		
+		<div class="selectors">
+			<div class="field">
+				<%= f.label :customer_id %>
+				<%= f.collection_select :customer_id, @customers, :id, :name %>
+			</div>
+			<div class="field">
+				<%= f.label :car_category_id %>
+				<%= f.collection_select :car_category_id, @car_categories, :id, :name %>
+			</div>
 		</div>
 		<button class="button-enviar-form" type="submit">Enviar</button>
 	<% end %>
