--- a/app/assets/stylesheets/manufacturers.css
+++ b/app/assets/stylesheets/manufacturers.css
@@ -10,6 +10,10 @@
 	padding: 1%;
 }
 
+.each-manufacturer a{
+	color: black;
+}
+
 /*Manufacturer - show*/
 .title-manufacturer {
 	margin-left: 5%;
