--- a/app/views/car_models/new.html.erb
+++ b/app/views/car_models/new.html.erb
@@ -1,4 +1,7 @@
-<h1>Novo modelo</h1>
-<%= link_to 'Voltar', car_models_path %>
+<h3 class="link-to-back"><%= link_to 'Voltar', car_models_path %></h3>
 
-<%= render "form" %>
+<div class="form-session">
+	<h1>Novo modelo</h1>
+
+	<%= render "form" %>
+</div>
