--- a/app/views/car_models/show.html.erb
+++ b/app/views/car_models/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Voltar', car_models_path %>
+<h3 class="link-to-back"><%= link_to 'Voltar', car_models_path %></h3>
 
 <table>
 	<thead>
