--- a/app/views/car_categories/new.html.erb
+++ b/app/views/car_categories/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Registre uma nova categoria:</h1>
+<h3 class="link-to-back"><%= link_to 'Voltar', car_categories_path %></h3>
 
-<%= link_to 'Voltar', car_categories_path %>
+<div class="form-session">
+	<h1>Registre uma nova categoria</h1>
 
-<%= render "form" %>
+	<%= render "form" %>
+</div>
