--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -2,26 +2,28 @@
 	<p><%= message %></p>
 <% end %>
 
-<%= form_with model: @car, local: true do |f|%>
-	<div>
-		<strong><%= f.label :license_plate %></strong>
-		<%= f.text_field :license_plate %>
-	</div>
-	<div>
-		<strong><%= f.label :color %></strong>
-		<%= f.number_field :color %>
-	</div>
-	<div>
-		<strong><%= f.label :car_model_id %></strong>
-		<%= f.collection_select :car_model_id, @car_models, :id, :name %>
-	</div>
-	<div>
-		<strong><%= f.label :mileage %></strong>
-		<%= f.number_field :mileage %>
-	</div>
-	<div>
-		<strong><%= f.label :subsidiary_id %></strong>
-		<%= f.collection_select :subsidiary_id, @subsidiaries, :id, :name %>
-	</div>
-	<button class="button-enviar-form" type="submit">Enviar</button>
-<% end %>
+<div class="form">
+	<%= form_with model: @car, local: true do |f|%>
+		<div class="field">
+			<%= f.label :license_plate %>
+			<%= f.text_field :license_plate %>
+		</div>
+		<div class="field">
+			<%= f.label :color %>
+			<%= f.number_field :color %>
+		</div>
+		<div class="field">
+			<%= f.label :car_model_id %>
+			<%= f.collection_select :car_model_id, @car_models, :id, :name %>
+		</div>
+		<div class="field">
+			<%= f.label :mileage %>
+			<%= f.number_field :mileage %>
+		</div>
+		<div class="field">
+			<%= f.label :subsidiary_id %>
+			<%= f.collection_select :subsidiary_id, @subsidiaries, :id, :name %>
+		</div>
+		<button class="button-enviar-form" type="submit">Enviar</button>
+	<% end %>
+</div>
