--- a/app/views/car_models/_form.html.erb
+++ b/app/views/car_models/_form.html.erb
@@ -3,28 +3,28 @@
 <% end %>
 
 <%= form_with model: @car_model, local: true do |f|%>
-	<div>
-		<strong><%= f.label :name %></strong>
+	<div class="field">
+		<%= f.label :name %>
 		<%= f.text_field :name %>
 	</div>
-	<div>
-		<strong><%= f.label :year %></strong>
+	<div class="field">
+		<%= f.label :year %>
 		<%= f.number_field :year %>
 	</div>
-	<div>
-		<strong><%= f.label :motorization %></strong>
+	<div class="field">
+		<%= f.label :motorization %>
 		<%= f.text_field :motorization %>
 	</div>
-	<div>
-		<strong><%= f.label :fuel_type %></strong>
+	<div class="field">
+		<%= f.label :fuel_type %>
 		<%= f.text_field :fuel_type %>
 	</div>
-	<div>
-		<strong><%= f.label :manufacturer_id %></strong>
+	<div class="field">
+		<%= f.label :manufacturer_id %>
 		<%= f.collection_select :manufacturer_id, @manufacturers, :id, :name %>
 	</div>
-	<div>
-		<strong><%= f.label :car_category_id %></strong>
+	<div class="field">
+		<%= f.label :car_category_id %>
 		<%= f.collection_select :car_category_id, @car_categories, :id, :name %>
 	</div>
 
