--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,10 +1,22 @@
-<%= link_to 'Voltar', cars_path %>
+<h3 class="link-to-back"><%= link_to 'Voltar', cars_path %></h3>
 
-<h2>Placa: <%= @car.license_plate %></h2>
-<h4>Cor: <%= @car.color %></h4>
-<h4>Modelo: <%= link_to @car.car_model.name, car_model_path(id: @car.car_model.id) %></h4>
-<h4>Quilometragem: <%= @car.mileage %></h4>
-<h4>Filial: <%= link_to @car.subsidiary.name, subsidiary_path(id: @car.subsidiary.id) %></h4>
+<div class="manufacturers-div">
+	<h2 class="title-info-models">Informações do Carro</h2>
+	<div class="info-cars">
+		<h4>Placa: </h4>
+			<p><%= @car.license_plate %></p>
+		<h4>Cor: </h4>
+			<p><%= @car.color %></p>
+		<h4>Modelo: </h4>
+			<p><%= link_to @car.car_model.name, car_model_path(id: @car.car_model.id) %></p>
+		<h4>Quilometragem: </h4> 
+			<p><%= @car.mileage %></p>
+		<h4>Filial: </h4>
+			<p><%= link_to @car.subsidiary.name, subsidiary_path(id: @car.subsidiary.id) %></p>
+	</div>
 
-<%= link_to 'Editar', edit_car_path(@car)%>
-<%= link_to 'Excluir', car_path(@car), method: :delete%>
+	<div class="buttons-manufacturer">
+		<p class="link-editar"><%= link_to 'Editar', edit_car_path(@car)%></p>
+		<p class="link-excluir"><%= link_to 'Excluir', car_path(@car), method: :delete%></p>
+	</div>
+</div>
