--- a/app/views/car_categories/show.html.erb
+++ b/app/views/car_categories/show.html.erb
@@ -1,5 +1,6 @@
 <h3 class="link-to-back"><%= link_to 'Voltar', car_categories_path %></h3>
 
+<h2 class="title-info-models">Informações da Categoria</h2>
 <table>
 	<thead>
 		<tr>
