--- a/app/assets/stylesheets/session.css
+++ b/app/assets/stylesheets/session.css
@@ -87,8 +87,10 @@
 .actions .send-email-password {
 	font-size: 15px;
 	border-radius: 0px;
-	width: 100%;
+	width: 70%;
 	background-color: gray;
+	margin-top: -1%;
+	margin-bottom: 5%;
 }
 
 /*Responsividade*/
@@ -114,6 +116,12 @@
 	/*Check-box*/
 	.check {
 		margin-bottom: 1%;
+	}
+
+	/*Link para enviar instrucoes por e-mail*/
+	.actions .send-email-password {
+		width: 30%;
+		margin-top: 0%;
 	}	
 }
 
@@ -134,6 +142,12 @@
 	.link-sign-up {
 		width: 25%;
 		padding: 2%;
+	}
+
+	/*Link para enviar instrucoes por e-mail*/
+	.actions .send-email-password {
+		width: 50%;
+		margin-top: 0%;
 	}
 }
 
