--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,12 @@
 		<% end %> 
 	</nav>
 
-    <%= flash[:notice] %>
+    <% if flash[:notice] %>
+        <p class="msg-alert"><%= flash[:notice] %></p>
+    <% end %>
 
     <% if flash[:alert] %>
-        <%= flash[:alert] %>
+        <p class="msg-error"><%= flash[:alert] %></p>
     <% end %>
 
     <%= yield %>
