--- a/app/views/manufacturers/_form.html.erb
+++ b/app/views/manufacturers/_form.html.erb
@@ -1,5 +1,5 @@
 <% @manufacturer.errors.full_messages.each do |message| %>
-	<p><%= message %></p>
+	<p class="msg-error"><%= message %></p>
 <% end %>
 
 <div class="form">
