--- a/app/views/rentals/search.html.erb
+++ b/app/views/rentals/search.html.erb
@@ -15,6 +15,9 @@
 		<dt>Categoria:</dt>
 		<dd><%= @rental.car_category.name %></dd>
 	</dl>
+
+	<%= link_to 'Iniciar', new_rental_car_rental_path(@rental) %>
+
 <% else %>
 	<p><%= "Nenhum resultado encontrado para: #{@q}" %></p>
 <% end %>
