--- a/app/views/rentals/search.html.erb
+++ b/app/views/rentals/search.html.erb
@@ -1,3 +1,11 @@
+<div class="field-seach">
+	<%= form_with url: search_rentals_path, method: :get, local: true do |f| %>
+		<%= f.label :q, 'Código' %>
+		<%= f.text_field :q%>
+		<button class="button-busca" type="submit">Buscar</button>
+	<% end %>
+</div>
+
 <% if @rental %>
 	<dl>
 		<dt>Código:</dt>
