--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -6,7 +6,7 @@
 	<h3><%= link_to 'Cadastrar Cliente', new_customer_path%></li></h3>
 	
 	<div class="field-seach">
-		<%= form_with url: search_customers_path, method: :get do |f| %>
+		<%= form_with url: search_customers_path, method: :get, local: true do |f| %>
 		  <%= f.label :q, 'Busca' %>
 		  <%= f.search_field :q %>
 		  <button class="button-busca" type="submit">Buscar</button>
