--- a/app/views/customers/search.html.erb
+++ b/app/views/customers/search.html.erb
@@ -1,3 +1,11 @@
+<div class="field-seach">
+	<%= form_with url: search_customers_path, method: :get, local: true do |f| %>
+		<%= f.label :q, 'Busca' %>
+		<%= f.search_field :q %>
+		<button class="button-busca" type="submit">Buscar</button>
+	<% end %>
+</div>
+
 <% if @customers.any? %>
 	<table>
 	  <thead>
