--- a/app/views/customers/search.html.erb
+++ b/app/views/customers/search.html.erb
@@ -1,3 +1,5 @@
+<h3 class="link-to-back"><%= link_to 'Voltar', customers_path %></h3>
+
 <div class="field-seach">
 	<%= form_with url: search_customers_path, method: :get, local: true do |f| %>
 		<%= f.label :q, 'Busca' %>
