--- a/app/views/rentals/search.html.erb
+++ b/app/views/rentals/search.html.erb
@@ -9,25 +9,34 @@
 </div>
 
 <% if @rental %>
-	<dl>
-		<dt>Código:</dt>
-		<dd><%= @rental.code %></dd>
-
-		<dt>Data de inicio:</dt>
-		<dd><%= @rental.start_date && localize(@rental.start_date) %></dd>
-
-		<dt>Data de término:</dt>
-		<dd><%= @rental.end_date && localize(@rental.end_date) %></dd>
-
-		<dt>Cliente:</dt>
-		<dd><%= @rental.customer.name %></dd>
-
-		<dt>Categoria:</dt>
-		<dd><%= @rental.car_category.name %></dd>
-	</dl>
-
-	<%= link_to 'Iniciar', new_rental_car_rental_path(@rental) %>
-
+			<table>
+				<head>
+					<tr>
+						<th>Código</th>
+						<th>Data de inicio</th>
+						<th>Data de término</th>
+						<th>Cliente</th>
+						<th>Categoria</th>
+						<th></th>
+						<th></th>
+					</tr>
+				</head>
+				<tbody>
+					
+					<tr>
+						<td><%= @rental.code %></td>
+						<td><%= @rental.customer.name %></td>
+						<td><%= @rental.car_category.name %></td>
+						<td><%= @rental.start_date && localize(@rental.start_date) %></td>
+						<td><%= @rental.end_date && localize(@rental.end_date) %></td>
+						<td class="link-start-rental"><%= link_to 'Iniciar', new_rental_car_rental_path(@rental) %></td>
+						<td class="link-editar"><%= link_to 'Editar', edit_rental_path(@rental), id: "edit-#{@rental.id}" %></td>
+						<td class="link-excluir"><%= link_to 'Excluir', rental_path(@rental), method: :delete, id: "delete-#{@rental.id}" %></td>
+						
+					</tr>
+					
+				</tbody>
+			</table>
 <% else %>
-	<p><%= "Nenhum resultado encontrado para: #{@q}" %></p>
+	<p class="msg-alert"><%= "Nenhum resultado encontrado para: #{@q}" %></p>
 <% end %>
