--- a/app/views/rentals/search.html.erb
+++ b/app/views/rentals/search.html.erb
@@ -38,5 +38,5 @@
 				</tbody>
 			</table>
 <% else %>
-	<p class="msg-alert"><%= "Nenhum resultado encontrado para: #{@q}" %></p>
+	<p class="msg-error"><%= "Nenhum resultado encontrado para: #{@q}" %></p>
 <% end %>
