--- a/app/views/car_rentals/new.html.erb
+++ b/app/views/car_rentals/new.html.erb
@@ -1,3 +1,5 @@
+<h3 class="link-to-back"><%= link_to 'Voltar', rentals_path %></h3>
+
 <div class="form-session">
 
 	<h1 class="title-start-rental">Iniciando um agendamento</h1>
