--- a/app/views/rentals/search.html.erb
+++ b/app/views/rentals/search.html.erb
@@ -1,6 +1,8 @@
 <h3 class="link-to-back"><%= link_to 'Voltar', rentals_path %></h3>
 
 <div class="field-seach">
+
+	<p class="inst-seach">Pesquise por uma locação a partir do codigo para agendá-la</p>
 	<%= form_with url: search_rentals_path, method: :get, local: true do |f| %>
 		<%= f.label :q, 'Código' %>
 		<%= f.text_field :q%>
