Adicionando testes para criar e visualizar locacoes

--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -23,10 +23,10 @@
 	<% end %>
 
 	<% if @rentals.any? %>
-			<table>
+			<table class="table">
 				<head>
 					<tr>
-						<th>Código</th>
+						<th><%= Rental.human_attribute_name(:code) %></th>
 						<th>Data de inicio</th>
 						<th>Data de término</th>
 						<th>Cliente</th>
