--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -27,10 +27,10 @@
 				<head>
 					<tr>
 						<th><%= Rental.human_attribute_name(:code) %></th>
-						<th>Data de inicio</th>
-						<th>Data de término</th>
-						<th>Cliente</th>
-						<th>Categoria</th>
+						<th><%= Rental.human_attribute_name(:start_date) %></th>
+						<th><%= Rental.human_attribute_name(:end_date) %></th>
+						<th><%= Rental.human_attribute_name(:customer) %></th>
+						<th><%= Rental.human_attribute_name(:car_category) %></th>
 						<th></th>
 						<th></th>
 					</tr>
@@ -39,10 +39,10 @@
 					<% @rentals.each do |rental| %>
 					<tr>
 						<td><%= rental.code %></td>
-						<td><%= rental.customer.name %></td>
-						<td><%= rental.car_category.name %></td>
 						<td><%= rental.start_date && localize(rental.start_date) %></td>
 						<td><%= rental.end_date && localize(rental.end_date) %></td>
+						<td><%= rental.customer.name %></td>
+						<td><%= rental.car_category.name %></td>
 						<td class="link-editar"><%= link_to 'Editar', edit_rental_path(rental), id: "edit-#{rental.id}" %></td>
 						<td class="link-excluir"><%= link_to 'Excluir', rental_path(rental), method: :delete, id: "delete-#{rental.id}" %></td>
 					</tr>
