--- a/app/views/customers/search.html.erb
+++ b/app/views/customers/search.html.erb
@@ -1,36 +1,11 @@
 <h3 class="link-to-back"><%= link_to 'Voltar', customers_path %></h3>
 
-<div class="field-seach">
-	<%= form_with url: search_customers_path, method: :get, local: true do |f| %>
-		<%= f.label :q, 'Busca' %>
-		<%= f.search_field :q %>
-		<button class="button-busca" type="submit">Buscar</button>
-	<% end %>
-</div>
+<%= render "search_field" %>
 
 <% if @customers.any? %>
-	<table>
-	  <thead>
-	    <tr>
-	      <th>Nome</th>
-	      <th>Email</th>
-	      <th>CPF</th>
-	      <th></th>
-	      <th></th>
-	     </tr>
-	  </thead>
-	  <tbody>
-	    <% @customers.each do |customer| %>
-	      <tr id="customer-<%= customer.id %>">
-		<td><%= customer.name %></td>
-		<td><%= customer.email %></td>
-		<td><%= customer.document %></td>
-		<td class="link-editar"><%= link_to 'Editar', edit_customer_path(customer), id: "edit-#{customer.id}" %></td>
-		<td class="link-excluir"><%= link_to 'Excluir', customer_path(customer), method: :delete, id: "delete-#{customer.id}" %></td>
-	      </tr>
-	    <% end %>
-	  </tbody>
-	</table>
+	<%= render "table" %>
 <% else %>
-	<p class="msg-error"><%= "Nenhum resultado encontrado para: #{@q}" %></p>
+	<p class="msg-error">
+		<%= "Nenhum resultado encontrado para: #{@q}" %>
+	</p>
 <% end %>
