Aplicando i18n ao index e show de car models

--- a/app/views/car_models/index.html.erb
+++ b/app/views/car_models/index.html.erb
@@ -13,9 +13,9 @@
 		<table>
 			<head>
 				<tr>
-					<th>Nome:</th>
-					<th>Ano:</th>
-					<th>Modelo:</th>
+					<th><%= CarModel.human_attribute_name(:name) %></th>
+					<th><%= CarModel.human_attribute_name(:year) %></th>
+					<th><%= CarModel.human_attribute_name(:manufacturer) %></th>
 					<th></th>
 				</tr>
 			</head>
